--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+GoogleService-Info.plist
 # Created by https://www.gitignore.io/api/swift,macos
 # Edit at https://www.gitignore.io/?templates=swift,macos
 
